forms-flow-data-analysis-api/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-api
  namespace : analytics-api
  labels:
    app.kubernetes.io/name: analyticsApi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: analyticsApi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: analyticsApi
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: analytics-api
          image: digitallsofmun/form-flow-data-analytics-api:latest
          ports:
            - containerPort: 5432
              name: analytics
              protocol: TCP
