forms-flow-data-analysis-api/service_dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: forms-flow-data-analytics-api-svc
  namespace: forms-flow-data-analytics-api
  labels:
    app.kubernetes.io/name: analyticsApi
spec:
  selector:
    app.kubernetes.io/name: analyticsApi
  ports:
    - name: forms-flow-data-analytics-api-port
      protocol: TCP
      port: 5430
      targetPort: 5432
